--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,15 @@ node_js:
   # so that your addon works for all apps
   - "4"
 
-sudo: false
+dist: trusty
+sudo: required
+
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 
 cache:
   directories:
@@ -27,11 +35,11 @@ matrix:
     - env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
   - npm config set spin false
   - npm install -g npm@4
   - npm --version
-  - npm install -g phantomjs-prebuilt
-  - phantomjs --version
 
 install:
   - npm install
