--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,10 @@ node_js:
   - "4"
 
 dist: trusty
-sudo: required
+sudo: false
 
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 
 cache:
   directories:
@@ -35,8 +31,6 @@ matrix:
     - env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
   - npm config set spin false
   - npm install -g npm@4
   - npm --version
