--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,15 @@ node_js:
   # so that your addon works for all apps
   - "4"
 
-dist: trusty
+dist: required
 sudo: false
 
 addons:
   chrome: stable
+
+before_script:
+  - "sudo chown root /opt/google/chrome/chrome-sandbox"
+  - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
 
 cache:
   directories:
