--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ env:
     # as well as latest stable release (bonus points to beta/canary)
     - EMBER_TRY_SCENARIO=ember-lts-2.12
     - EMBER_TRY_SCENARIO=ember-lts-2.16
+    - EMBER_TRY_SCENARIO=ember-lts-3.4
+    - EMBER_TRY_SCENARIO=ember-lts-3.8
+    - EMBER_TRY_SCENARIO=ember-lts-3.12
+    - EMBER_TRY_SCENARIO=ember-lts-3.15
     - EMBER_TRY_SCENARIO=ember-release
     - EMBER_TRY_SCENARIO=ember-beta
     - EMBER_TRY_SCENARIO=ember-canary
