--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "test": "ember try:each"
   },
   "dependencies": {
+    "ember-batcher": "^3.0.0",
     "ember-cli-babel": "^7.13.2",
     "ember-cli-htmlbars": "^4.2.2",
-    "ember-singularity": "^1.0.2"
+    "ember-singularity": "^1.0.2",
+    "ember-test-selectors": "^3.0.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -37,7 +39,6 @@
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars-inline-precompile": "^3.0.1",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.1.1",
     "ember-cli-shims": "^1.2.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
